# swagger_server/swagger/swagger.yaml
@@ -15,7 +15,7 @@ schemes:
 paths:
   /:
     get:
-      description: "Retuns the list of all available courses"
+      description: "Retuns the list of all available courses (Group by semesters)"
       operationId: "get_courses"
       produces:
       - "application/json"
@@ -24,7 +24,7 @@ paths:
         "200":
           description: "successful request"
           schema:
-            $ref: "#/definitions/CourseList"
+            $ref: "#/definitions/Semester"
       x-swagger-router-controller: "swagger_server.controllers.default_controller"
   /{semester}/:
     get:
@@ -244,115 +244,4 @@ definitions:
       type: "object"
       properties:
         Course:
-          type: "object"
-          properties:
-            code:
-              type: "string"
-              description: "Course Code"
-              pattern: "^[a-z]{2}d{3}$"
-            name:
-              type: "string"
-              description: "Course Name"
-            credits:
-              type: "integer"
-              description: "Credits"
-            core_or_elective:
-              type: "string"
-              description: "Core or Elective"
-            prerequisites:
-              type: "array"
-              description: "Prerequisites"
-              items:
-                type: "string"
-            course_content:
-              type: "string"
-              description: "Course Contents"
-            objectives:
-              type: "string"
-              description: "Objectives of the course"
-            ILOs:
-              type: "object"
-              properties:
-                Knowledge:
-                  type: "array"
-                  description: "Knowledge gained from the course"
-                  items:
-                    type: "string"
-                Skill:
-                  type: "array"
-                  description: "Skills gained from the course"
-                  items:
-                    type: "string"
-                Attitude:
-                  type: "array"
-                  description: "Attitudes gained from the course"
-                  items:
-                    type: "string"
-            allocation:
-              type: "string"
-              description: "Total time allocations for different sessions of the given\
-                \ course"
-            modules:
-              type: "array"
-              description: "Modules of a given course"
-              items:
-                type: "object"
-                properties:
-                  topic:
-                    type: "string"
-                    description: "Topic of the module"
-                  description:
-                    type: "string"
-                    description: "Description of the module"
-                  allocation:
-                    type: "object"
-                    properties:
-                      L:
-                        type: "string"
-                        description: "Lecture hours of the given module"
-                      T:
-                        type: "string"
-                        description: "Tutorial Class hours of the given module"
-                      P:
-                        type: "string"
-                        description: "Practical Class hours of the given module"
-                      A:
-                        type: "string"
-                        description: "Assignments of the given module (in hours)"
-            references:
-              type: "array"
-              description: "Useful reference materials of the given course"
-              items:
-                type: "string"
-            marks:
-              type: "object"
-              description: "Marks allocated for different sessions of the given course"
-              properties:
-                description:
-                  type: "string"
-                allocation:
-                  type: "string"
-            lecturers:
-              type: "array"
-              description: "Lecturers of the given course"
-              items:
-                type: "object"
-                properties:
-                  name:
-                    type: "string"
-                    description: "Name of the lecturer"
-                  title:
-                    type: "string"
-                    description: "Designation of the lecturer"
-                  email:
-                    type: "string"
-                    description: "Email address of the lecturer"
-                  teleOffice:
-                    type: "string"
-                    description: "Office telephone number of the lecturer"
-                  teleMobile:
-                    type: "string"
-                    description: "Mobile telephone number of the lecturer"
-            url:
-              type: "string"
-              description: "URL for the course details"
+          $ref: "#/definitions/Course"
